fix: hide all scrollbars

--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -12,6 +12,12 @@
   font-family: Arial, Helvetica, sans-serif;
   font-weight: normal;
 }
+* {
+  -ms-overflow-style: none;
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
 body {
   min-height: 100vh;
   font-size: 16px;
